deploy/03-randomizer-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: randomizer-svc
spec:
  selector:
    app: randomizer
  ports:
    - port: 80
      targetPort: 5000
  #    nodePort: 30007
  #type: NodePort
