deploy/05-mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo
  # namespace: final-task
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
