deploy/07-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: randomizer
spec:
  ingressClassName: traefik
  defaultBackend:
    service:
      name: randomizer-svc
      port:
        number: 80
